# proxy/internal/modules/auth/controller/message.go
@@ -1,0 +1,21 @@
+package controller
+
+type LoginRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type LoginResponse struct {
+	Success bool   `json:"success"`
+	Message string `json:"message"`
+}
+
+type RegisterRequest struct {
+	Username string `json:"username"`
+	Password string `json:"password"`
+}
+
+type RegisterReponse struct {
+	Success bool   `json:"success"`
+	Message string `json:"message"`
+}
